# Edge-Detection-and-Following-Robot-with-ROS2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/move/share/move/: package.sh
install/vision/share/vision/: package.sh
log/: latest_build
move/: package.xml  setup.py
move/move/: .move.py.swp  move.py
vision/: package.xml  setup.py
vision/vision/: edge.py  edge_detection.py  image_publisher.py
