<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move</name>
  <version>0.0.0</version>
  <description>moving along the edge</description>
  <maintainer email="baya0029@algonquinlive.com">vahabbayat</maintainer>
  <license>No License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>interfaces</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
